[gd_scene load_steps=5 format=3 uid="uid://b2wuw4dq066pp"]

[ext_resource type="Script" path="res://Scenes/Items/Item.gd" id="1_0iqin"]
[ext_resource type="Texture2D" uid="uid://cwduuur75vryx" path="res://Resources/NinjaAdventure/Items/Potion/Hear.png" id="2_xtsir"]
[ext_resource type="AudioStream" uid="uid://b454m0r2xeuf" path="res://Resources/NinjaAdventure/Sounds/Game/Fx.wav" id="3_pqcui"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g4qy8"]
size = Vector2(28, 24)

[node name="Item" type="Area2D"]
collision_layer = 64
collision_mask = 2
script = ExtResource("1_0iqin")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_xtsir")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_g4qy8")

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_pqcui")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_flash_timer_timeout"]
